# ctat-LR-fusion v1.0.2 Jan 14, 2024
- use less RAM by:
  - dont load entire alignment gff3 file into ram at once, instead process one alignment target at a time
  - update to ctat-mm2 to fix memory leak
  (Thanks Sergey Aganezov for reporting and testing issues!)


# ctat-LR-fusion v1.0.1 Dec 31, 2024
- bugfix wrt igv-prep and igv html for vis of long reads
- sync'd latest minimap2 to ctat-minimap2

# ctat-LR-fusion v1.0.0 Oct 8, 2024
- works well for both ONT and PacBio under default params.
- excludes alignment overlaps between gene pairs that fall within sequence-similar regions, and requires at least 25 bases (default) of exon overlap in the remaining regions.
- excluding neighbor-overlap gene pairings and additional annotation-based filtering between phase-1 and phase-2.
- added --FI_extra_params custom parameter to pass through STAR parameters to F
- included option for --examine_coding_effect



# ctat-LR-fusion v0.13.0 Jan 27, 2024
- allow for paralog alignments to be included
- pursue additional candidates where one breakpoint is initially <= MAX_EXON_DELTA and the other is within 1kb and there's multiple reads suggesting it.
- with multiple reads suggesting fusion, use the min value for the deltas in phase 1 for candidate selection.
- reorganization of preliminary candidate intermediate output formatting for easier tracking and troubleshooting of findings.
- igv-reports v1.11.0 which has default ordering of fusions according to descending read support in the html.



# ctat-LR-fusion v0.12.0 Jan 02, 2024
-  igv html working with long and short reads together
-  results sorted by descending countws of supporting reads
- in combined long/short mode, retain any fusion calls with illumina reads that meet the min read requirements regardless of dominant isoform fraction results
- added option  --chim_candidates_only to just get the initial list of chimeric candidate



# ctat-LR-fusion v0.11.0 Oct 12, 2023
- leaner on disk space usage by sam->bam streamed