@@ -3,10 +3,10 @@ simple: test_excl_shortreads
 
 both:  test_incl_shortreads test_excl_shortreads
 
-all_long_read_tests: test_excl_shortreads test_excl_shortreads_set_num_total_reads  test_excl_shortreads_bam_input
+all_long_read_tests: test_excl_shortreads test_excl_shortreads_set_num_total_reads  test_excl_shortreads_bam_input test_oncoreads test_oncoreads_chim_candidates_only
 
 
-all: test_incl_shortreads test_excl_shortreads test_excl_shortreads_set_num_total_reads  test_longOnly_fqgz test_longOnly_fq test_incl_coding_effect
+all: all_long_read_tests test_incl_shortreads  test_longOnly_fqgz test_longOnly_fq test_incl_coding_effect
 
 
 test_excl_shortreads:
@@ -17,7 +17,7 @@ test_excl_shortreads_reg_mm2:
 
 
 test_excl_shortreads_bam_input:
-	../ctat-LR-fusion -T transcripts.fa --genome_lib_dir ${CTAT_GENOME_LIB} -o ctat_LR_fusion_outdir.excl_short.LR_bam --min_J 1  --min_sumJS 1 --vis --extract_fusion_LR_fasta fusion_ev_LR.reads.fa --min_trans_overlap_length 75 --LR_bam transcripts.mm2.bam
+	../ctat-LR-fusion --genome_lib_dir ${CTAT_GENOME_LIB} -o ctat_LR_fusion_outdir.excl_short.LR_bam --min_J 1  --min_sumJS 1 --vis --extract_fusion_LR_fasta fusion_ev_LR.reads.fa --min_trans_overlap_length 75 --LR_bam transcripts.mm2.bam
 
 test_excl_shortreads_set_num_total_reads:
 	../ctat-LR-fusion -T transcripts.fa --genome_lib_dir ${CTAT_GENOME_LIB} -o ctat_LR_fusion_outdir.excl_short.setNumReads --min_J 1  --min_sumJS 1 --vis --extract_fusion_LR_fasta fusion_ev_LR.reads.fa --min_trans_overlap_length 75 --num_total_reads 500000
@@ -42,8 +42,7 @@ test_incl_FI_params:
 test_longOnly_fqgz:
 	../ctat-LR-fusion -T transcripts.fq.gz --genome_lib_dir ${CTAT_GENOME_LIB} -o ctat_LR_fusion_outdir.excl_short.fqgz --min_J 1  --min_sumJS 1 --min_novel_junction_support 1
 
-test_longOnly_fq:
-	../ctat-LR-fusion -T transcripts.fq --genome_lib_dir ${CTAT_GENOME_LIB} -o ctat_LR_fusion_outdir.excl_short.fq --min_J 1  --min_sumJS 1 --min_novel_junction_support 1
+test_longOnly_fq: test_excl_shortreads
 
 
 test_oncoreads:
